# health-v1

./: .cursorignore  .dockerignore  .env.bak  .env.bak2  .env.bak3  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  0  ANATOMY_3D_IMPLEMENTATION.md  ANATOMY_3D_QUICKSTART.md  ARCHITECTURE.md  BUILD_MEMORY_FIX.md  BUILD_OPTIMIZATION_GUIDE.md  CHANGELOG.md  CLAUDE.md  COMMANDS.md  DOCKER.md  ENV.md  FINAL_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  MANUAL_TESTING_CHECKLIST.md  Makefile  PHASE_4_7_LOGINFORM_COMPLETE.md  PHYSICS_IMPLEMENTATION_GUIDE.md  README.docker.md  REFACTORING_GUIDE.md  REFACTORING_SUMMARY.md  RUSTYVAULT_SECURITY_AUDIT.md  RUSTYVAULT_UI_SETUP.md  SONARQUBE.md  SYSTEM_CONNECTIONS.md  TESTING.md  TESTING_EXECUTION_GUIDE.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_QUICKSTART.md  TESTING_README.md  TEST_RESULTS.md  UI_GAP_ANALYSIS_COMPLETE.md  (+15 more)
auth-service/: Cargo.toml
auth-service/migrations/: 0001_create_users.up.sql  0002_create_roles_permissions.up.sql  0003_create_user_roles.up.sql  0004_create_encryption_keys.down.sql  0004_create_encryption_keys.up.sql  0005_create_refresh_tokens.up.sql  0006_create_relationships.up.sql  0007_seed_roles_permissions.up.sql  0008_create_audit_logs.down.sql  0008_create_audit_logs.up.sql  0009_create_passkey_credentials.up.sql
auth-service/scripts/openbao-init/: init.sh
auth-service/src/: main.rs
auth-service/src/application/dto/: auth_dto.rs
auth-service/src/config/: providers.rs
auth-service/src/domain/entities/: encryption_key.rs  permission.rs  relationship.rs  user.rs
auth-service/src/domain/repositories/: mod.rs  role_repository.rs
auth-service/src/domain/value_objects/: email.rs
auth-service/src/infrastructure/encryption/: dek_manager.rs
auth-service/src/infrastructure/oidc/: token.rs
auth-service/src/infrastructure/repositories/: key_repository_impl.rs  mod.rs  permission_repository_impl.rs  refresh_token_repository_impl.rs  relationship_repository_impl.rs  role_repository_impl.rs  user_repository_impl.rs
auth-service/src/presentation/api/: routes.rs
auth-service/src/shared/: app_state.rs  mod.rs  request_context.rs
auth-service/tests/domain/entities/: relationship.rs
auth-service/tests/domain/value_objects/: email.rs
auth-service/tests/shared/: masking.rs
backend/: .tarpaulin.toml  API_REFERENCE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  clippy.toml  deny.toml  rustfmt.toml  sonar-project.properties
backend/.cargo/: config.toml
backend/admin-service/: Cargo.toml
backend/admin-service/src/: lib.rs
backend/admin-service/src/dashboard/: mod.rs  routes.rs
backend/admin-service/src/dto/: mod.rs  service_dto.rs  user_dto.rs
backend/admin-service/src/handlers/: admin_handlers.rs  dashboard_handlers.rs  encryption_handlers.rs  graph_handlers.rs  group_handlers.rs  mod.rs  permission_handlers.rs  setup_handlers.rs  user_handlers.rs  workflow_handlers.rs
backend/admin-service/src/setup/: create_super_admin.rs  mod.rs  setup_organization.rs
backend/admin-service/src/use_cases/: mod.rs
backend/admin-service/src/user/: create_user.rs  delete_user.rs  mod.rs  update_user.rs
backend/admin-service/tests/dto/: service_dto.rs  user_dto.rs
backend/api-service/: Cargo.toml  Dockerfile
backend/api-service/src/: lib.rs  main.rs
backend/api-service/tests/integration/: README.md  appointments_test.rs  auth_test.rs  lab_orders_test.rs
backend/authz-core/: Cargo.toml
backend/authz-core/src/: lib.rs
backend/authz-core/src/auth/: login.rs  logout.rs  mod.rs  refresh_token.rs  userinfo.rs
backend/authz-core/src/authorization/: mod.rs  (+1 more)
backend/migrations/: 0000_create_schema_migrations.down.sql  0000_create_schema_migrations.up.sql  0001_create_users.down.sql  0001_create_users.up.sql  0002_create_roles_permissions.down.sql  0002_create_roles_permissions.up.sql  0003_create_user_roles.down.sql  0003_create_user_roles.up.sql  0004_create_encryption_keys.up.sql  0005_create_refresh_tokens.down.sql  0005_create_refresh_tokens.up.sql  0006_create_relationships.down.sql  0006_create_relationships.up.sql  0007_seed_roles_permissions.down.sql  0007_seed_roles_permissions.up.sql  0008_create_audit_logs.up.sql  0009_create_passkey_credentials.down.sql  0009_create_passkey_credentials.up.sql  0010_create_organizations.down.sql  0010_create_organizations.up.sql  0011_add_organization_to_users.down.sql  0011_add_organization_to_users.up.sql  0012_create_setup_status.down.sql  0012_create_setup_status.up.sql  0013_add_audit_fields.down.sql  0013_add_audit_fields.up.sql  0014_add_relationship_expiration.up.sql  0021_ensure_organizations_audit_fields.down.sql  0021_ensure_organizations_audit_fields.up.sql  0022_add_request_id_to_missing_tables.down.sql  0022_add_request_id_to_missing_tables.up.sql  0042_add_realm_scoping.down.sql  0042_add_realm_scoping.up.sql  0043_create_approle_tables.down.sql  0043_create_approle_tables.up.sql  0044_create_geographic_regions.down.sql  0044_create_geographic_regions.up.sql  0045_create_regulations.down.sql  0045_create_regulations.up.sql  0046_create_compliance_rules.down.sql  (+65 more)
backend/migrations/extensions/: 0001_enable_postgis.down.sql  0001_enable_postgis.up.sql  README.md
backend/migrations/seeds/: 001_lab_tests.sql  002_sample_patients.sql  003_sample_appointments.sql  004_sample_lab_orders.sql  005_sample_imaging_orders.sql  cds_rules.sql  lab_test_catalog.sql  seed_body_system_lab_mappings.sql  seed_body_systems.sql  task_templates.sql  test_dashboard_data.sql  test_users.sql
backend/rustyvault-service/: Cargo.toml  Dockerfile
backend/rustyvault-service/src/: errors.rs  lib.rs  main.rs
backend/rustyvault-service/tests/: TESTING_GUIDE.md  VAULT_FLOW_TEST_PLAN.md  test_helpers.rs  vault_flow_test.rs
backend/shared/: Cargo.toml
backend/shared/oidc/: jwks.rs  provider.rs  token.rs
backend/shared/src/: lib.rs
backend/shared/zanzibar/: relationship_store.rs
backend/state-machine-macro/: Cargo.toml
backend/state-machine-macro/src/: lib.rs
backend/yottadb-api/: Cargo.toml  Dockerfile
backend/yottadb-api/src/: main.rs
(+674 files in other folders)
