[workspace]
members = [
    "shared",
    "authz-core",
    "admin-service",
    "api-service",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.91"

[workspace.dependencies]
# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "uuid", "chrono", "migrate", "macros"] }

# Encryption
aes-gcm = "0.10"
ring = "0.17"
pbkdf2 = "0.12"
base64 = "0.22"
hex = "0.4"

# OIDC/JWT
jsonwebtoken = { version = "10.0", features = ["rust_crypto"] }
oauth2 = "5.0"
josekit = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"

# Configuration
config = "0.15"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# UUID
uuid = { version = "1.19", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Password hashing
bcrypt = "0.17"
sha2 = "0.10"

# HTTP client (for vault/storage providers)
reqwest = { version = "0.12", features = ["json"] }

# AWS SDK (for AWS providers)
aws-sdk-s3 = "1.115"
aws-sdk-kms = "1.96"
aws-config = "1.8"

# CLI tools
dialoguer = "0.11"

# Graph algorithms
petgraph = "0.8"

