[workspace]
members = [
    "shared",
    "authz-core",
    "admin-service",
    "api-service",
    "rustyvault-service",
]
resolver = "2"

[workspace.package]
version = "1.1.0"
edition = "2021"
rust-version = "1.91"

[workspace.dependencies]
# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "uuid", "chrono", "migrate", "macros"] }

# Encryption
aes-gcm = "0.10"
age = { version = "0.11", features = ["async"] }
ring = "0.17"
pbkdf2 = "0.12"
base64 = "0.22"
hex = "0.4"

# OIDC/JWT
jsonwebtoken = { version = "10.0", features = ["rust_crypto"] }
oauth2 = "5.0"
josekit = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"

# Configuration
config = "0.15"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# UUID
uuid = { version = "1.19", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Password hashing
bcrypt = "0.17"
sha2 = "0.10"

# HTTP client (for vault/storage providers)
reqwest = { version = "0.13", features = ["json"] }

# AWS SDK (for AWS providers)
aws-sdk-s3 = "1.115"
aws-sdk-kms = "1.96"
aws-config = "1.8"

# CLI tools
dialoguer = "0.11"

# Graph algorithms
petgraph = "0.8"

# LRU Cache
lru = "0.12"

[workspace.lints.clippy]
# Allow unwrap/expect in test code - deny in production
unwrap_used = "warn"
expect_used = "warn"

# Code quality
cognitive_complexity = "warn"
too_many_arguments = "warn"
too_many_lines = "warn"

# Correctness
redundant_closure = "warn"
len_without_is_empty = "warn"

# Style
should_implement_trait = "warn"
inherent_to_string = "warn"

[workspace.lints.rust]
# Deny unsafe code in the workspace
unsafe_code = "deny"
# Warn on missing docs
missing_docs = "warn"

[profile.dev]
# Reduce memory usage during development builds
incremental = true
codegen-units = 4  # More units = less memory per unit, faster compilation

[profile.release]
opt-level = "z"  # Optimize for size
lto = true        # Link-time optimization
codegen-units = 1 # Better optimization
strip = true      # Strip symbols

