[workspace]
members = [
    "shared",
    "authz-core",
    "admin-service",
    "api-service",
    "rustyvault-service",
    "yottadb-api",
    "state-machine-macro",
]
resolver = "2"

[workspace.package]
version = "1.4.0"
edition = "2021"
rust-version = "1.91"

[workspace.dependencies]
# Web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower_governor = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-native-tls", "postgres", "sqlite", "uuid", "chrono", "migrate", "macros", "bigdecimal"] }

# Encryption
aes-gcm = "0.10"
age = { version = "0.11", features = ["async"] }
ring = "0.17"
pbkdf2 = "0.12"
base64 = "0.22"
hex = "0.4"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
blake3 = "1.8"

# OIDC/JWT
jsonwebtoken = { version = "10.0", features = ["rust_crypto"] }
oauth2 = "5.0"
josekit = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"

# Configuration
config = "0.15"
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# UUID
uuid = { version = "1.19", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Password hashing
bcrypt = "0.17"
sha2 = "0.10"

# HTTP client (for vault/storage providers)
reqwest = { version = "0.12", features = ["json"] }

# AWS SDK (for AWS providers)
aws-sdk-s3 = "1.115"
aws-sdk-kms = "1.96"
aws-config = "1.8"

# CLI tools
dialoguer = "0.11"

# Graph algorithms
petgraph = "0.8"

# LRU Cache
lru = "0.16"

# Concurrent data structures
arc-swap = "1"
dashmap = "6.1"

# Data structures
radix_trie = "0.2"
enum-map = "2.6"

# URL encoding (for YottaDB adapter)
urlencoding = "2.1"

# Decimal arithmetic (for financial/lab values)
bigdecimal = { version = "0.4", features = ["serde"] }

# Lazy initialization
once_cell = "1.20"

# Regex for rule validation and pattern matching
regex = "1.11"

# Random number generation
rand = "0.8"

# URL parsing
url = "2.5"

# Enum utilities
strum = { version = "0.25", features = ["derive"] }

[workspace.lints.clippy]
# Allow unwrap/expect in test code - deny in production
unwrap_used = "warn"
expect_used = "warn"

# Code quality
cognitive_complexity = "warn"
too_many_arguments = "warn"
too_many_lines = "warn"

# Correctness
redundant_closure = "warn"
len_without_is_empty = "warn"

# Style
should_implement_trait = "warn"
inherent_to_string = "warn"

[workspace.lints.rust]
# Deny unsafe code in the workspace
unsafe_code = "deny"
# Warn on missing docs
missing_docs = "warn"

[profile.dev]
# Reduce memory usage during development builds
incremental = true
codegen-units = 4  # More units = less memory per unit, faster compilation
split-debuginfo = "unpacked"  # Faster debug builds (macOS/Linux)

[profile.release]
opt-level = "z"  # Optimize for size
lto = "thin"      # Thin LTO for faster builds with good optimization
codegen-units = 1 # Better optimization
strip = true      # Strip symbols
incremental = false  # Disable incremental for clean release builds

# Fast release profile for Docker builds (faster compile, still optimized)
[profile.docker-release]
inherits = "release"
opt-level = 2      # Less aggressive optimization
lto = "thin"       # Thin LTO
incremental = true # Enable incremental for faster rebuilds

