[package]
name = "authz-core"
version = "1.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
shared = { path = "../shared" }

# OIDC/JWT
jsonwebtoken.workspace = true
oauth2.workspace = true
josekit.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# UUID
uuid.workspace = true

# Time
chrono.workspace = true

# Password hashing
bcrypt.workspace = true
sha2.workspace = true

