[package]
name = "rustyvault-service"
version = "1.2.0"
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "rustyvault-service"
path = "src/main.rs"

[dependencies]
# Health-v1 shared infrastructure
shared = { path = "../shared" }

# Web framework
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true

# Database
sqlx.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Configuration
config.workspace = true
dotenv.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# UUID
uuid.workspace = true

# Time
chrono.workspace = true

# Password hashing
bcrypt.workspace = true

# RustyVault-specific dependencies
zeroize.workspace = true
arc-swap.workspace = true
radix_trie.workspace = true
dashmap.workspace = true
blake3.workspace = true
base64.workspace = true
hex.workspace = true

# Encryption (for barrier)
aes-gcm = { workspace = true, features = ["aes"] }
ring.workspace = true
pbkdf2.workspace = true
rand.workspace = true
sha2.workspace = true

# Additional utilities
url.workspace = true
regex.workspace = true
strum.workspace = true
enum-map.workspace = true
lru.workspace = true

[dev-dependencies]
# Test dependencies
tempfile = "3.10"
reqwest = { version = "0.13", features = ["json"] }

