[package]
name = "state-machine-macro"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Procedural macro for generating type-safe state machines with audit logging"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
